[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://scenes/character/player.gd" id="1_sgwqt"]
[ext_resource type="PackedScene" path="res://scenes/character/character_sprite_animation.tscn" id="2_1qnhu"]
[ext_resource type="Script" path="res://scenes/map/camera.gd" id="2_w2j1q"]
[ext_resource type="Script" path="res://scenes/character/player_input.gd" id="2_wkjb4"]
[ext_resource type="PackedScene" path="res://scenes/character/character_footsteps_audio.tscn" id="5_b6dcy"]

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_sgwqt")
_feet_offset = 10.0

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_smoothed = true
position_smoothing_enabled = true
script = ExtResource("2_w2j1q")

[node name="player_input" type="Node" parent="."]
script = ExtResource("2_wkjb4")

[node name="character_sprite_animation" parent="." instance=ExtResource("2_1qnhu")]

[node name="character_footsteps_audio" parent="." instance=ExtResource("5_b6dcy")]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 17, -7, 0, -14, -17, -7)
